--- a/TodoApp/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/TodoApp.Api/TodoApp.Api.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resolvers\UnityResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
