--- a/TodoApp/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
+++ b/TodoApp/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="ItemsControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ItemExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
