--- a/TodoApp/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/TodoApp.Api/TodoApp.Api.csproj
@@ -87,6 +87,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\JsonFormatterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Global.asax.cs">
