KA-368 Move UnityContainer initialization to separate class

--- a/TodoApp/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/TodoApp.Api/TodoApp.Api.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\JsonFormatterConfig.cs" />
+    <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Global.asax.cs">
