--- a/TodoApp/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
+++ b/TodoApp/TodoApp.Api.Tests/TodoApp.Api.Tests.csproj
@@ -77,9 +77,9 @@
   <ItemGroup>
     <Compile Include="ItemsControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\EqualConstraintExtensions.cs" />
-    <Compile Include="Utils\ItemComparer.cs" />
-    <Compile Include="Utils\ItemExtensions.cs" />
+    <Compile Include="Extensions\EqualConstraintExtensions.cs" />
+    <Compile Include="Extensions\ItemComparer.cs" />
+    <Compile Include="Extensions\ItemExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
