--- a/TodoApp/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/TodoApp.Api/TodoApp.Api.csproj
@@ -124,6 +124,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\UnityResolver.cs" />
+    <Compile Include="Services\UrlHelperService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
