--- a/TodoApp/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Repositories\IItemRepository.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IUrlHelperService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
