KA-368 Generalize IDatabaseConfig not to be used only for databases

--- a/TodoApp/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/TodoApp.Api/TodoApp.Api.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="App_Start\JsonFormatterConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="App_Start\UrlServiceConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Extensions\UnityContainerExtensions.cs" />
