--- a/TodoApp/Src/TodoApp.Database/TodoApp.Database.csproj
+++ b/TodoApp/Src/TodoApp.Database/TodoApp.Database.csproj
@@ -99,7 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configs\DatabaseConfig.cs" />
+    <Compile Include="DatabaseConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ItemRepository.cs" />
   </ItemGroup>
@@ -124,5 +124,6 @@
       <Name>TodoApp.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
