--- a/TodoApp/Src/TodoApp.Database/TodoApp.Database.csproj
+++ b/TodoApp/Src/TodoApp.Database/TodoApp.Database.csproj
@@ -99,7 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseConfig.cs" />
+    <Compile Include="DatabaseBootstrap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ItemRepository.cs" />
   </ItemGroup>
