--- a/TodoApp/Src/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/Src/TodoApp.Api/TodoApp.Api.csproj
@@ -54,22 +54,9 @@
       <HintPath>..\..\packages\System.Configuration.ConfigurationManager.4.4.1\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web.DynamicData" />
-    <Reference Include="System.Web.Entity" />
-    <Reference Include="System.Web.ApplicationServices" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Web.Services" />
-    <Reference Include="System.EnterpriseServices" />
     <Reference Include="Unity.Abstractions, Version=3.3.1.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Unity.5.8.11\lib\net47\Unity.Abstractions.dll</HintPath>
     </Reference>
@@ -116,7 +103,6 @@
   <ItemGroup>
     <Compile Include="App_Start\JsonFormatterConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="ApiBootstrap.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Extensions\UnityContainerExtensions.cs" />
@@ -125,7 +111,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\UnityResolver.cs" />
-    <Compile Include="Services\UrlService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -140,6 +125,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TodoApp.ApiServices\TodoApp.ApiServices.csproj">
+      <Project>{2D90286C-83DB-4EE8-A9C0-22BCB0D4BA3B}</Project>
+      <Name>TodoApp.ApiServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TodoApp.Contracts\TodoApp.Contracts.csproj">
       <Project>{FDAB04B3-56AB-430D-B4B2-3B0B81536F5E}</Project>
       <Name>TodoApp.Contracts</Name>
