--- a/TodoApp/Tests/TodoApp.Dependency.Tests/TodoApp.Dependency.Tests.csproj
+++ b/TodoApp/Tests/TodoApp.Dependency.Tests/TodoApp.Dependency.Tests.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Configs\UnityConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resolvers\TestContainer.cs" />
+    <Compile Include="Containers\TestContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
