--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -42,10 +42,8 @@
     <Compile Include="Repositories\IItemRepository.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Routes\IRouteNames.cs" />
     <Compile Include="Services\IUrlService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
