--- a/TodoApp/Tests/TodoApp.ApiServices.Tests/TodoApp.ApiServices.Tests.csproj
+++ b/TodoApp/Tests/TodoApp.ApiServices.Tests/TodoApp.ApiServices.Tests.csproj
@@ -49,7 +49,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.6\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
@@ -73,6 +72,10 @@
     <ProjectReference Include="..\..\Src\TodoApp.ApiServices\TodoApp.ApiServices.csproj">
       <Project>{2D90286C-83DB-4EE8-A9C0-22BCB0D4BA3B}</Project>
       <Name>TodoApp.ApiServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Src\TodoApp.Api\TodoApp.Api.csproj">
+      <Project>{C94FBFBA-B38B-4F39-BEF5-2A79BEBBCD13}</Project>
+      <Name>TodoApp.Api</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Src\TodoApp.Contracts\TodoApp.Contracts.csproj">
       <Project>{FDAB04B3-56AB-430D-B4B2-3B0B81536F5E}</Project>
