KA-369 Add sanitized connection string and wrap it in class

--- a/TodoApp/Src/TodoApp.Api/TodoApp.Api.csproj
+++ b/TodoApp/Src/TodoApp.Api/TodoApp.Api.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Routes\RouteNames.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ConnectionStrings.config" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
