--- a/TodoApp/Src/TodoApp.Api/Web.config
+++ b/TodoApp/Src/TodoApp.Api/Web.config
@@ -9,6 +9,9 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+
+  <connectionStrings configSource="ConnectionStrings.config">
+  </connectionStrings>
   
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
