--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\IRouteNames.cs" />
+    <Compile Include="Services\IConnectionService.cs" />
     <Compile Include="Services\IUrlService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
