--- a/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
+++ b/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDAB04B3-56AB-430D-B4B2-3B0B81536F5E}</ProjectGuid>
+    <ProjectGuid>{6CA39B97-0F92-418C-AD6B-4D7C4658F873}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TodoApp.Contracts</RootNamespace>
-    <AssemblyName>TodoApp.Contracts</AssemblyName>
+    <RootNamespace>TodoApp.Services</RootNamespace>
+    <AssemblyName>TodoApp.Services</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -33,19 +33,23 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstraps\IBootstrap.cs" />
-    <Compile Include="Containers\IDependencyContainer.cs" />
-    <Compile Include="Exceptions\DependencyResolutionFailedException.cs" />
-    <Compile Include="Repositories\IItemRepository.cs" />
-    <Compile Include="Models\Item.cs" />
+    <Compile Include="Items\ItemService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Routes\IRouteNames.cs" />
-    <Compile Include="Services\IConnectionService.cs" />
-    <Compile Include="Services\IItemService.cs" />
-    <Compile Include="Services\IUrlService.cs" />
+    <Compile Include="ServicesBootstrap.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Contracts\TodoApp.Contracts.csproj">
+      <Project>{FDAB04B3-56AB-430D-B4B2-3B0B81536F5E}</Project>
+      <Name>TodoApp.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
