--- a/TodoApp/Src/TodoApp.Dependency/packages.config
+++ b/TodoApp/Src/TodoApp.Dependency/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
