KA-369 Add services for Guid and DateTime generation

--- a/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
+++ b/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
@@ -39,6 +39,8 @@
     <Compile Include="Items\ItemService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicesBootstrap.cs" />
+    <Compile Include="Utils\DateTimeService.cs" />
+    <Compile Include="Utils\GuidService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Contracts\TodoApp.Contracts.csproj">
