--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\IRouteNames.cs" />
     <Compile Include="Services\IConnectionService.cs" />
+    <Compile Include="Services\IDateTimeService.cs" />
+    <Compile Include="Services\IGuidService.cs" />
     <Compile Include="Services\IItemService.cs" />
     <Compile Include="Services\IUrlService.cs" />
   </ItemGroup>
