--- a/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
+++ b/TodoApp/Src/TodoApp.Services/TodoApp.Services.csproj
@@ -36,7 +36,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Items\ItemService.cs" />
+    <Compile Include="Items\ItemCreatingService.cs" />
+    <Compile Include="Items\ItemObtainingService.cs" />
+    <Compile Include="Items\ItemUpdatingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicesBootstrap.cs" />
     <Compile Include="Utils\DateTimeService.cs" />
