--- a/TodoApp/Tests/TodoApp.Services.Tests/TodoApp.Services.Tests.csproj
+++ b/TodoApp/Tests/TodoApp.Services.Tests/TodoApp.Services.Tests.csproj
@@ -58,7 +58,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Items\ItemServiceTests.cs" />
+    <Compile Include="Items\ItemCreatingServiceTests.cs" />
+    <Compile Include="Items\ItemObtainingServiceTests.cs" />
+    <Compile Include="Items\ItemUpdatingServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeServiceTests.cs" />
     <Compile Include="Utils\GuidServiceTests.cs" />
