--- a/TodoApp/Src/TodoApp.ApiServices/TodoApp.ApiServices.csproj
+++ b/TodoApp/Src/TodoApp.ApiServices/TodoApp.ApiServices.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="ApiServicesBootstrap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ConnectionService.cs" />
+    <Compile Include="Wrappers\ConnectionStringWrapper.cs" />
     <Compile Include="Services\UrlService.cs" />
   </ItemGroup>
   <ItemGroup>
