--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -44,13 +44,14 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes\IRouteNames.cs" />
-    <Compile Include="Services\IConnectionService.cs" />
-    <Compile Include="Services\IDateTimeService.cs" />
-    <Compile Include="Services\IGuidService.cs" />
+    <Compile Include="Wrappers\IConnectionStringWrapper.cs" />
+    <Compile Include="Wrappers\IDateTimeWrapper.cs" />
+    <Compile Include="Wrappers\IGuidWrapper.cs" />
     <Compile Include="Services\IItemCreatingService.cs" />
     <Compile Include="Services\IItemObtainingService.cs" />
     <Compile Include="Services\IItemUpdatingService.cs" />
     <Compile Include="Services\IUrlService.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
