--- a/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
+++ b/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
@@ -76,7 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Containers\DependencyContainer.cs" />
-    <Compile Include="LifetimeManagers\LifetimeManagerTypesExtensions.cs" />
+    <Compile Include="Extensions\IDependencyContainerExtensions.cs" />
+    <Compile Include="LifetimeManagers\LifecycleExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\DependencyResolver.cs" />
     <Compile Include="DependencyConfig.cs" />
