--- a/TodoApp/Tests/TodoApp.Dependency.Tests/packages.config
+++ b/TodoApp/Tests/TodoApp.Dependency.Tests/packages.config
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net472" />
   <package id="NUnit" version="3.10.1" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="Unity" version="5.8.11" targetFramework="net472" />
 </packages>
