--- a/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
+++ b/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
@@ -76,8 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Containers\DependencyContainer.cs" />
+    <Compile Include="Containers\DependencyProvider.cs" />
     <Compile Include="Extensions\IDependencyContainerExtensions.cs" />
-    <Compile Include="LifetimeManagers\LifecycleExtensions.cs" />
+    <Compile Include="Extensions\LifecycleExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\DependencyResolver.cs" />
     <Compile Include="DependencyConfig.cs" />
